# studio

./: .env.sample  .env.test.sample  .gitignore  .lefthook.yaml  README.md  config.toml  docker-compose-authentik.yml  docker-compose-nebius.yml  docker-compose-ollama.yml  docker-compose-override.yml  docker-compose.yml  entrypoint.sh  env  jsconfig.json  librechat.yaml  nginx.conf  package-lock.json  package.json  pyproject.toml  scepa_tools.json  shell.nix
.claude/skills/SGB-maintainer/: README.md  SKILL.md
.claude/skills/SGB-maintainer/references/: c4-mermaid.md
.claude/skills/SGB-maintainer/references/sections/: 00-index.md  01-context.md  02-functional-overview.md  03-quality-attributes.md  04-constraints.md  05-principles.md  06-software-architecture.md  07-external-interfaces.md  08-code.md  09-data.md  10-infrastructure.md  11-deployment.md  12-operation-support.md  13-decision-log.md
.claude/skills/diagram-improver/: SKILL.md
.claude/skills/diagram-improver/scripts/: README.md  improve_diagram.sh  mermaid_improvement.prompt
.claude/skills/documentation-referencing/: SKILL.md
.github/ISSUE_TEMPLATE/: custom-feature-template.md  custom-task-template.md  custom.md  epic-and-sub-epic-template.md
.github/workflows/: frontend_linter.yaml  lint.yaml  tests.yaml  toolchain_check.yaml  typecheck.yaml
.roo/skills/: core-config.yaml
.roo/skills/github-board-manager/: SKILL.md
.roo/skills/github-board-manager/references/: github-issue-manager-reference.md
.roo/skills/github-board-manager/scripts/: github-issue-manager.sh
.roo/skills/github-issues-generator/: SKILL.md
.roo/skills/github-projects/: SKILL.md
.roo/skills/github-projects/references/: github-issue-manager-reference.md
.roo/skills/github-projects/scripts/: github-issue-manager.sh
dockerfiles/: Dockerfile  Dockerfile.backend  Dockerfile.llm_worker  Dockerfile.mcp  Dockerfile.ollama
docs/software-guidebook/: 00-index.md  01-context.md  02-functional-overview.md  03-quality-attributes.md  04-constraints.md  05-principles.md  06-software-architecture.md  07-external-interfaces.md  08-code.md  09-data.md  10-infrastructure.md  11-deployment.md  12-operation-support.md  13-decision-log.md
issue-drafts/: epic-expertise-mining.md  task-typeql-query-patterns-docs.md
kg/: index.html
kg/assets/: index-BAOMM3sG.js  index-D3g2-rL2.js  index-DPGMNX91.css
scripts/: build_frontend.py  run_qava_test.py  setup_authentik.py  setup_authentik.sh
src/backend/: __init__.py  config.py  data_loader.py  main.py
src/backend/endpoints/: __init__.py  assets.py  auth.py  chat.py  data_loader.py  endpoints.py  graph.py  log_event.py  startup.py
src/backend/graph_helpers/: data_loader.py
src/backend/lib/: __init__.py  models.py  schemagenerators.py  tools.py
src/backend/models/: chat_message.py
src/backend/stores/: abstract_store.py  redis.py
src/backend/utility/: chat_util.py  graph_api_models.py  graph_data_loader.py  log_util.py
src/frontend/: .gitignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json
src/frontend/plans/: breadcrumb-code-review.md
src/frontend/src/: App.jsx  Breadcrumbs.jsx  chat.jsx  graph.jsx  index.css
src/frontend/src/components/: BreadcrumbNode.jsx  BreadcrumbsOverlay.jsx  ChatHamburgerMenu.jsx  CustomEdge.jsx  CustomNode.jsx  FeedbackButton.jsx  HamburgerMenu.jsx  LogOutButton.jsx  NewChatButton.jsx  NodeBody.jsx
src/frontend/src/components/ui/: button.jsx  calendar.jsx  chart.jsx  field.jsx  input-group.jsx  kbd.jsx  menubar.jsx  resizable.jsx  select.jsx  sidebar.jsx
src/frontend/src/data/: api.js  atoms.js  chatResponse.js  chatWebsocket.js  feedback.js  graphMockData.js  graphResponse.js  knowledgeGraphData.js
src/frontend/src/hooks/: useFlowAnimation.js
src/frontend/src/knowledge-graph/: example-data.json
src/frontend/src/lib/: breadcrumbLayout.js  ctrytoscapeLayout.js  graphUtils.js
src/frontend/src/plan/: avoid-breadcrumb-collision-layout.md  breadcrumb-implementation-plan.md
src/llm-worker/: main.py
src/llm-worker/lib/: llm.py  tools.py
src/llm-worker/mcp_servers/: main.py
src/llm_worker/: main.py
src/llm_worker/endpoints/: ask.py
src/llm_worker/lib/: __init__.py  llm.py  mcp_client.py  models.py  schemagenerators.py  settings.py
src/llm_worker/mcp_servers/auth/: auth.py  main.py  models.py  security.py
src/llm_worker/mcp_servers/qdrant/: qdrant_source.py
src/llm_worker/mcp_servers/zotero/: zotero_source.py
src/llm_worker/utility/: llm_helper.py
src/mcp_servers/: main.py
src/mcp_servers/lib/qdrant/: qdrant_source.py
src/mcp_servers/tools/: han_employee_hours.py  scepa_paper_search.py
src/studio/: main.py
src/studio/auth/: userdb.py
src/studio/mcp/: employee_hours.py
src/studio/mcp/scepa/: paper_search.py
src/studio/qdrant/: qdrant_source.py
src/studio/typedb/: db_sink.py
src/studio/zotero/: zotero_source.py
studio-project/: .gitignore  Tailwind.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
studio-project/src/: App.jsx  avatars.js  chat.jsx  chatAI.jsx  graph.jsx  index.css
studio-project/src/backend/: __main__.py
studio-project/src/components/chat/: chat.jsx
studio-project/src/data/: atoms.js  chatResponse.js  knowledgeGraphData.js
studio-project/src/hooks/: useGraphTransformer.js
studio-project/src/knowledge-graph/: example-data.json
studio-project/src/lib/: ctrytoscapeLayout.js  graphUtils.js
studio-project/test-backend/: README.md  pyproject.toml
studio-project/test-backend/app/: __init__.py  data_loader.py  main.py
tests/bdd/: README.MD  config.js  config.mjs  package-lock.json  package.json
tests/bdd/containers/: docker-compose-authentik.yml  studio-oauth-app.yaml
tests/bdd/features/: chatbot.feature  get_literature_supported_knowledge_mcp.feature  me_endpoint.feature  qavajs.feature  qavajsApi.feature
tests/bdd/memory/: index.js
tests/bdd/page_object/: index.js
tests/bdd/report/: report.html
tests/bdd/step_definition/: auth_steps.js  chat_steps.js  langfuse_steps.js  mcp_steps.js
(+23 files in other folders)
