# -----------------------------
# Build system
# -----------------------------
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/studio"]

# -----------------------------
# Dependency groups (PEP 735)
# -----------------------------
[dependency-groups]
dev = ["nest_asyncio"]

# -----------------------------
# Project metadata + PyPI runtime deps
# -----------------------------
[project]
name = "MCP-demo"
description = "MCP demo library"
readme = "README.md"
license = { text = "NONE" }
authors = [
  { name = "RaoulG", email = "Raoul.Grouls@han.nl" },
  { name = "Hoog-V", email = "victor.hogeweij@han.nl" },
]
classifiers = [
  "Environment :: Console",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
version = "0.1.0"

dependencies = [
    "fastmcp==2.10.3",
    "httpx",
    "typedb-driver==2.29.2",
    "langfuse",
    "fastapi",
    "uvicorn",
    "passlib",
    "sqlalchemy"
    "langfuse", 
	"qdrant-client>=1.15.1", 
	"sentence-transformers>=5.1.2", 
	"pyzotero>=1.7.3"
]

# -----------------------------
# Testing
# -----------------------------
[tool.pytest.ini_options]
pythonpath = ["client", "server"]
addopts = ["--import-mode=importlib"]

# -----------------------------
# Pixi (Conda) — merged here for clarity
# -----------------------------
[tool.pixi.workspace]
channels = [
  "https://fast.prefix.dev/conda-forge",
  "https://repo.prefix.dev/pypdfium2-public",
  "https://repo.prefix.dev/pytorch",
]
platforms = ["linux-64", "osx-64", "osx-arm64"]

# Host deps (for builds like docling from PyPI)
[tool.pixi.host-dependencies]
compilers = ">=1.9.0"
pkg-config = ">=0.29.2"

# Conda-side runtime dependencies
[tool.pixi.dependencies]
python = "3.12.*"
python-dotenv = ">=1.1.0"
loguru = ">=0.7.3,<0.8"
lefthook = ">=1.11.13,<2"
lychee = ">=0.15.1,<0.16"
einops = ">=0.8.1,<0.9"
ruff = ">=0.11.13,<0.12"
isort = ">=6.0.1,<7"
mypy = ">=1.16.0,<2"
typing_extensions = ">=4.14.0,<5"

[tool.pixi.tasks]
mcp_server="PYTHONPATH=src python -m studio.main"
run_auth = "PYTHONPATH=src uvicorn studio.auth.main:app --reload"
vscode = "code ."
lint = "ruff check"
typecheck = "mypy ."
test = "pytest -q"

# Activation env
[tool.pixi.activation.env]
PYTHONNOUSERSITE = "1"
LD_LIBRARY_PATH = "$CONDA_PREFIX/lib:$LD_LIBRARY_PATH"

# Platform-specific deps
[tool.pixi.target.linux-64.dependencies]
python-devtools = ">=0.12.2"         # Optional but useful
# cuda-toolkit = "12.9.0.*"   # For use with CUDA

# -----------------------------
# Mypy
# -----------------------------
[tool.mypy]
allow_redefinition = true
disable_error_code = [
    "call-arg",        # unexpected keyword arguments
    "import-untyped",  # missing stubs like requests
    "import-not-found",
    "call-overload",
    "arg-type",
    "misc",
]
pretty = true
exclude = [
    "^\\.pixi/",  # ignore the .pixi folder at repo root
    "^\\studio-project/"
]

# -----------------------------
# Ruff
# -----------------------------
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "C4", "PT"]

[tool.ruff]
exclude = [".pixi", "tests", "studio-project"]
