# ====================================
# Build system
# ====================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/studio"]

# ====================================
# Project metadata + runtime deps
# ====================================
[project]
name = "MCP-demo"
description = "MCP demo library"
readme = "README.md"
license = { text = "NONE" }
authors = [
  { name = "RaoulG", email = "Raoul.Grouls@han.nl" },
  { name = "Hoog-V",  email = "victor.hogeweij@han.nl" },
]
classifiers = [
  "Environment :: Console",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
  "fastmcp>=2.10.1",
  "fastapi",
  "langfuse==3.13",
  "openai",
  "loguru>=0.7.3",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]",
  "python-socketio>=5.15.0,<6", 
  "langchain-openai", 
  "langchain", 
  "typing-extensions",
  "mcp-use>=1.5.0,<2",
  "redis>=5.0.0",
]

# ====================================
# Dev dependencies (PEP 735 groups)
# ====================================
[dependency-groups]
dev = [
  "isort>=7.0.0",
  "mypy>=1.18.2",
  "nest-asyncio",
  "ruff>=0.14.5",
  "toml-sort>=0.24.3"
]

# ====================================
# Testing
# ====================================
[tool.pytest.ini_options]
pythonpath = ["client", "server"]
addopts = ["--import-mode=importlib"]

# ====================================
# Pixi workspace
# ====================================
[tool.pixi.workspace]
channels = [
  "https://fast.prefix.dev/conda-forge",
  "https://repo.prefix.dev/pypdfium2-public",
  "https://repo.prefix.dev/pytorch",
]
platforms = ["linux-64", "osx-arm64", "win-64"]


# ====================================
# Pixi environment dependencies
# ====================================
[tool.pixi.dependencies]
python = "3.12.*"
pkg-config = ">=0.29.2"

# Node & tooling
nodejs = ">=22.13.0,<22.14"

ruff = "*"

mypy = "*"
# Smaller libs
einops = ">=0.8.1"
itsdangerous = ">=2.2.0,<3"
pytorch = ">=2.2,<3"
cpuonly = "*"

# Tools duplicated in project/dev groups (ok for Pixi env)
loguru = ">=0.7.3,<0.8"
python-dotenv = ">=1.1.0"
# ====================================
# Shared Pixi tasks (placeholders unless overridden)
# ====================================
[tool.pixi.tasks]
backend = "docker compose up"
vscode = "code ."
lint = "ruff check"
typecheck = "mypy ."
test = "pytest -q"

frontend_build = ""
backend_no_docker = ""
mcp_server = ""
qava_test = "python scripts/run_qava_test.py"


# ====================================
# Linux tasks (POSIX, Bash-only where needed)
# ====================================
[tool.pixi.target.linux-64.tasks]
frontend_build = "python scripts/build_frontend.py"

backend_no_docker = """
BASE_URL=http://localhost:10090 PYTHONPATH=src \
python -m uvicorn src.backend.main:app --host 0.0.0.0 --port 10090 --reload
"""

mcp_server = 'PYTHONPATH=src python -m src.mcp_servers.main'

# ====================================
# macOS ARM tasks
# ====================================
[tool.pixi.target.osx-arm64.tasks]
frontend_build = "python scripts/build_frontend.py"
backend_no_docker = """
BASE_URL=http://localhost:10090 PYTHONPATH=src \
python -m uvicorn src.backend.main:app --host 0.0.0.0 --port 10090 --reload
"""

mcp_server = 'PYTHONPATH=src python -m src.mcp_servers.main'

# ====================================
# Windows (cmd.exe)
# =====================================
[tool.pixi.target.win-64.tasks]
frontend_build = "python scripts/build_frontend.py"
backend_no_docker = '''
PYTHONPATH=src python -m uvicorn src.backend.main:app --host 0.0.0.0 --port 10090 --reload
'''

mcp_server = 'PYTHONPATH=src python -m src.mcp_servers.main'

# ====================================
# Pixi activation environment
# ====================================
[tool.pixi.activation.env]
PYTHONNOUSERSITE = "1"
# LD_LIBRARY_PATH  = "$CONDA_PREFIX/lib:$LD_LIBRARY_PATH"

# ====================================
# Platform-specific dependencies
# ====================================
[tool.pixi.target.linux-64.dependencies]
python-devtools = ">=0.12.2"

# ====================================
# Mypy config
# ====================================
[tool.mypy]
allow_redefinition = true
disable_error_code = [
  "call-arg",
  "import-untyped",
  "import-not-found",
  "call-overload",
  "arg-type",
  "misc",
]
pretty = true
exclude = ["^\\.pixi/", "^studio-project/"]

# ====================================
# Ruff config
# ====================================
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "C4", "PT"]

[tool.ruff]
exclude = [".pixi", "tests", "studio-project"]